[gd_scene load_steps=6 format=3 uid="uid://t22dmgoo0oxx"]

[ext_resource type="Script" path="res://Debugging/Tests/Entities/DumbFriend/DumbFriend.gd" id="1_sur7k"]
[ext_resource type="Texture2D" uid="uid://ctd8u1stx423v" path="res://icon.svg" id="2_820ae"]
[ext_resource type="PackedScene" uid="uid://c4c2k5w488n1d" path="res://Debugging/Tests/Entities/DumbFriend/GrapplingHook.tscn" id="3_jfa0e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dnf3o"]
radius = 16.0
height = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wkx7"]
size = Vector2(50, 20)

[node name="DumbFriend" type="CharacterBody2D"]
script = ExtResource("1_sur7k")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dnf3o")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 0.999996)
scale = Vector2(0.25, 0.625)
texture = ExtResource("2_820ae")

[node name="GrapplingHookPivot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="GrapplingHook" parent="GrapplingHookPivot" node_paths=PackedStringArray("character") instance=ExtResource("3_jfa0e")]
position = Vector2(30, 0)
character = NodePath("../..")

[node name="StompArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 38)
monitoring = false

[node name="CollisionShape" type="CollisionShape2D" parent="StompArea"]
shape = SubResource("RectangleShape2D_0wkx7")

[node name="RandomKeyTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUDContainer" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="PanelContainer" type="PanelContainer" parent="HUD/HUDContainer"]
layout_mode = 0
offset_left = -127.0
offset_right = 40.0
offset_bottom = 82.0

[node name="RandomKeyLabel" type="Label" parent="HUD/HUDContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
